# shifter

./: .checkov.yaml  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .ground-control.yaml  .importlinter  .kube-linter.yaml  .mcp.json  .pre-commit-config.yaml  .shifter.yaml  .snyk  .tflint.hcl  .vale.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ISSUE-guacamole-rdp-gateway.md  LICENSE  Makefile  PLAN-engine-refactor.md  README.md  SECURITY.md  UAT_TEST_PLAN_DEV_FEATURES.md  aptl.json  docker-compose.yml  eslint.config.js  main.tf  mkdocs.yml  moo.txt  outputs.tf  package-lock.json  package.json  sonar-project.properties  start-lab.sh  temp.md  terraform.tfvars.example  towncrier.toml  variables.tf
containers/gaming-api/api/: .gitignore  Cargo.toml  character_inventory_review.txt  create-test-user.js  database.js  database.sqlite  jest.config.js  package-lock.json  package.json  server.js  session_review.txt  tsconfig.json
containers/gaming-api/data-generator/: Cargo.toml
mcp/openwebui-mcp-wrapper/: README.md  mcp_wrapper.py  mcp_wrapper_victim.py  pyproject.toml  test_mcp_wrapper.py
portal/: .env.example  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml
portal/cms/: apps.py
portal/cms/assets/: services.py  upload_session.py
portal/config/: dev_auth.py  logging.py  oidc.py  settings.py  urls.py  views.py
portal/documentation/: urls.py  views.py
portal/documentation/docs/: architecture.md  index.md  security.md
portal/documentation/upcoming/: terminal-tabbed-layout.md
portal/engine/services/: allocation.py  orchestration.py  scenarios.py  serialization.py
portal/mission_control/: __init__.py  admin.py  consumers.py  context_processors.py  fields.py  models.py  routing.py  signals.py  urls.py  views.py
portal/mission_control/migrations/: 0001_initial_models.py  0002_seed_operating_systems.py  0004_range_status_fields.py  0005_range_step_function_execution_arn_range_subnet_cidr_and_more.py  0006_create_provisioner_lambda_user.py  0007_add_range_updated_at.py  0008_range_kali_instance_id_range_kali_ip.py  0009_grant_kali_columns_to_provisioner.py  0010_range_kali_ssh_key_secret_arn.py  0011_create_mcp_user.py  0012_add_cognito_sub_to_userprofile.py  0012_range_victim_ssh_key_secret_arn.py  0013_create_victim_mcp_user.py  0014_rename_mcp_user_to_kali_mcp_user.py  0015_grant_victim_ssh_key_to_provisioner.py  0017_grant_pulumi_columns_to_provisioner.py  0019_range_dc_agent.py  0020_grant_ngfw_columns_to_provisioner.py  0020_ngfw_models.py  0021_grant_ngfw_columns_to_provisioner.py  0023_grant_ngfwconfig_to_provisioner.py  0025_strata_config.py  0027_drop_ngfw_config.py  0030_ngfw_models.py
portal/mission_control/services/: __init__.py  engine.py  provisioner.py  s3.py  ssh.py  upload_token.py  validation.py
portal/mission_control/templatetags/: user_extras.py
portal/risk_register/: admin.py  apps.py  models.py  views.py
portal/risk_register/api/: authentication.py  permissions.py  serializers.py  urls.py  views.py
portal/risk_register/migrations/: 0001_initial.py
portal/static/css/: documentation.css  terminal.css  xdr-dropdown.css  xdr-sidebar.css  xdr-theme.css
portal/static/js/: dashboard.js  dashboard.test.js  ngfw.js  sidebar.js  terminal.js  upload.js  upload.test.js  xdr-dropdown.js
portal/templates/: coming_soon.html  dev_login.html
portal/templates/documentation/: _nav_tree.html  base.html
portal/templates/mission_control/: agents.html  base.html  dashboard.html  demos.html  help.html  history.html  ngfw.html  settings.html  terminal.html
portal/templates/partials/: icon_sidebar.html
portal/templates/risk_register/: apikey_list.html  base.html  risk_detail.html  risk_form.html  risk_list.html
portal/tests/: conftest.py  test_agents.py  test_asset_hierarchy.py  test_consumers.py  test_engine.py  test_health.py  test_models.py  test_ngfw_models.py  test_oidc.py  test_presigned_upload.py  test_provisioner.py  test_range_api.py  test_s3_service.py  test_strata_config.py  test_views.py
portal/tests/cms/: test_assets.py  test_upload_session.py
portal/tests/documentation/: test_helpers.py  test_views.py
portal/tests/engine/: test_allocation.py  test_orchestration.py  test_scenarios.py  test_serialization.py
portal/tests/risk_register/: __init__.py
scripts/bootstrap/: README.md  deploy.py  dev.sh  prod.sh  pyproject.toml  runner.py  test_deploy.py
scripts/bootstrap/tests/: conftest.py  test_deploy.py  test_runner.py
scripts/check_layer_imports/: check_layer_imports.py  layer_imports.yaml  pyproject.toml
scripts/check_layer_imports/tests/: test_check_layer_imports.py
scripts/check_rds_pending_modifications/: check_rds_pending_modifications.py  pyproject.toml  test_check_rds_pending_modifications.py
scripts/gcp/: pyproject.toml  render_edge_manifest.py  render_kustomize_images.py  render_private_service_netpol.py  render_runtime_env.py  render_serviceaccount_patch.py
scripts/gcp/tests/: test_render_edge_manifest.py  (+4 more)
shifter/cyberscript/: __init__.py  enums.py  exceptions.py  pyproject.toml  script_context.py  template_vars.py
shifter/installation/: README.md  __init__.py  __main__.py  backends.py  cli.py  contract.py  errors.py  loader.py  pyproject.toml  range_egress.py  registry.py  schema.py
shifter/packer/: README.md  brokenbk.pkr.hcl  ctf-devbox.pkr.hcl  ctf-helpdesk.pkr.hcl  ctf-mailroom.pkr.hcl  ctf-vault.pkr.hcl  ctf-webshell.pkr.hcl  dc-amis.json  dc.pkr.hcl  dev-gcp.pkrvars.hcl  dev.pkrvars.hcl  kali.pkr.hcl  prod.pkrvars.hcl  pyproject.toml  ubuntu.pkr.hcl  variables.pkr.hcl  windows.pkr.hcl
shifter/shifter_platform/: .dockerignore  .env.deploy.example  .env.example  .gitignore  .stylelintrc.json  Dockerfile  Dockerfile.worker  Makefile  docker-compose.deploy.yml  docker-compose.yml  entrypoint-lib.sh  entrypoint.sh  eslint.config.js  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-gcp.txt
uat/event-load-harness/: .gitignore  README.md  pyproject.toml  sample-envelope-report.md
(+3608 files in other folders)
