[project]
name = "shifter-openwebui-tools"
version = "0.5.2"
description = "OpenWebUI tools for Shifter MCP integration"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = ["test_*.py"]
