[project]
name = "bootstrap"
version = "0.1.0"
description = "Shifter AWS account bootstrap deployment scripts"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF"]
# T201: print allowed (CLI tool)
# S603/S607: subprocess allowed (AWS CLI/terraform calls)
# SIM108: ternary operator not always clearer
# RUF001: unicode chars in output are intentional
# RUF005: list concat is clearer in some cases
# RUF013: implicit Optional is fine for CLI tools
ignore = ["S101", "T201", "S603", "S607", "SIM108", "RUF001", "RUF005", "RUF013"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
