[project]
name = "check-layer-imports"
version = "0.1.0"
description = "Check cross-layer imports between Shifter service layers"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF", "C901"]
ignore = ["S101", "T201", "S112"]  # T201: print allowed (CLI tool), S112: try-except-continue allowed

# Per-function McCabe complexity limit (ADR-012). Existing offenders carry
# `# noqa: C901`; threshold ratchets down as the backlog shrinks.
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101", "B112"]  # B112: try-except-continue allowed (CLI tool)
