[project]
name = "check-rds-pending-modifications"
version = "0.1.0"
description = "Post-apply gate that fails dev RDS deploys with unapplied PendingModifiedValues or pending-reboot parameter groups"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF"]
# T201: print allowed (CLI tool).
# S101: assert is the normal pytest idiom.
# S603: subprocess.run is called with fixed-argv lists against the aws/terraform
#   CLIs already on PATH inside the deploy job — no shell, no untrusted input.
ignore = ["S101", "T201", "S603"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
