[project]
name = "gcp-scripts"
version = "0.1.0"
description = "Shifter GCP deploy-time rendering scripts"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF", "C901"]
# T201: print allowed (CLI tool)
# S603/S607: subprocess allowed (gcloud/kubectl calls)
# SIM108: ternary operator not always clearer
ignore = ["S101", "T201", "S603", "S607", "SIM108"]

# Per-function McCabe complexity limit (ADR-012). Existing offenders carry
# `# noqa: C901`; threshold ratchets down as the backlog shrinks.
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# S108: tests pass throwaway /tmp paths to exercise path validators.
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
