[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberscript"
version = "0.1.0"
description = "Shared contracts and schemas for Shifter platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
