[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberscript"
version = "0.1.0"
description = "Shared contracts and schemas for Shifter platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[tool.setuptools]
packages = ["cyberscript", "cyberscript.channels", "cyberscript.messages", "cyberscript.schemas"]
package-dir = {"cyberscript" = "."}
