[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "installation"
version = "0.2.0"
description = "Root installation config and backend bundle contract for Shifter OSS deployments"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
shifter-config = "installation.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "bandit>=1.9.2",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.setuptools]
packages = ["installation"]
package-dir = {"installation" = "."}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: spawns a subprocess to exercise the installed CLI (`python -m installation`) end to end",
]

[tool.coverage.run]
omit = [
    "tests/conftest.py",
    "tests/*/conftest.py",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF", "C901"]
# T201: print is intentional in the CLI tool
# S101: assert is fine in tests (covered by per-file ignores too)
ignore = ["S101", "T201"]

# Per-function McCabe complexity limit (ADR-012). Existing offenders carry
# `# noqa: C901`; threshold ratchets down as the backlog shrinks.
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# S603: tests spawn the test interpreter (`sys.executable`) with fully literal args
#       to exercise the `python -m installation` entry point — no untrusted input.
"tests/**/*.py" = ["S101", "S105", "S106", "S603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
