[project]
name = "packer"
version = "0.1.0"
description = "Packer AMI build configuration"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF", "C901"]
ignore = ["S101"]

# Per-function McCabe complexity limit (ADR-012). Existing offenders carry
# `# noqa: C901`; threshold ratchets down as the backlog shrinks.
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
