[project]
name = "shifter-platform"
version = "0.1.0"
description = "Self-service cyber range platform"
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.23.0",
    "bleach>=6.3.0",
    "boto3",
    "channels",
    "channels-redis",
    "daphne",
    "django>=6.0.6",
    "django-encrypted-model-fields>=0.6.5",
    "django-health-check<5.0",
    "django-ses",
    "djangorestframework",
    "firebase-admin",
    "gunicorn",
    "markdown",
    "mozilla-django-oidc",
    "paramiko",
    "psycopg[binary]",
    "pycurl>=7.45.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests",
    "uvicorn-worker",
    # uvicorn's WebSocket protocol backend. Not imported directly: the
    # Gunicorn/Uvicorn ASGI workers (entrypoint.sh) need websockets (or wsproto)
    # installed to accept WebSocket upgrades. Without it the built image's
    # uvicorn logs "No supported WebSocket library detected" and the portal's
    # terminal / range-status / notification sockets fail at runtime while
    # /health still passes - the exact container-only regression class the #922
    # stack smoke exists to catch.
    "websockets",
    "whitenoise",
]

[dependency-groups]
dev = [
    "import-linter>=2.7.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.3",
    "pytest-django>=4.11.1",
    "ruff>=0.15.13",
    "bandit>=1.9.2",
    "pre-commit>=4.5.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
    "mypy>=2.1.0",
    "django-stubs>=6.0.4",
    "types-requests>=2.33.0.20260513",
    "types-bleach>=6.3.0.20260508",
    "types-Markdown>=3.7.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
pythonpath = [".."]  # Add shifter/ to path so cyberscript is importable
# This suite mixes fast unit tests with a large number of Django DB tests.
# Uncapped `-n auto` over-parallelizes the DB-heavy portion and spends too much
# time on worker/database setup. A capped worker pool plus loadscope improves
# end-to-end runtime on representative slices while keeping full-suite
# parallelism enabled.
addopts = "-n auto --maxprocesses=4 --dist loadscope --reuse-db"

[tool.coverage.run]
# ``source = ["."]`` makes coverage record paths from the
# shifter_platform package root so coverage.xml has unambiguous
# repo-relative names (``cms/services/_common.py`` rather than
# ``services/_common.py`` rooted at the ``cms`` source directory).
# Without this, SonarCloud cannot disambiguate when two Django apps
# happen to share a sub-path (e.g. ``cms/services/_common.py`` and
# ``engine/services/_common.py``) and attributes coverage to whichever
# source root it picks, leaving the loser at 0%.
source = ["."]
omit = [
    "tests/conftest.py",
    "tests/*/conftest.py",
    "*/migrations/*",
]

# Ruff - linting and formatting
[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    "staticfiles",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "C901",   # mccabe per-function complexity (ADR-012)
]
ignore = [
    "S101",   # assert - OK in tests
    "S105",   # hardcoded password - false positives on empty strings
    "RUF012", # Django Meta class attributes don't need ClassVar
    "S608",   # false positive on f-strings in error messages
]

# Per-function McCabe complexity limit (ADR-012). Existing offenders carry
# `# noqa: C901`; threshold ratchets down as the backlog shrinks.
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is fine in tests
    "S105",   # hardcoded passwords in test fixtures OK
    "S106",   # same
]
"config/settings.py" = [
    "S105",   # empty password string for default
    "F403",   # ``from config._<topic> import *`` re-exports Django settings
    "F405",   # ditto — names land via star-imports declared with __all__
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Bandit - security scanning
[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]  # assert OK in production code for this project

# Mypy - static type checking
[tool.mypy]
python_version = "3.12"
mypy_path = ".."  # Add shifter/ to path so cyberscript is importable
plugins = ["mypy_django_plugin.main"]
exclude = [
    "migrations/",
    ".venv/",
    "tests/",
]
# Start permissive, tighten over time
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
# Per-module overrides for stricter checking on new code
[[tool.mypy.overrides]]
module = "cms.services"
disallow_untyped_defs = true
warn_return_any = true

# uv - dependency constraints for transitive security fixes
[tool.uv]
constraint-dependencies = [
    "cryptography>=46.0.7",
    "pyopenssl>=26.0.0",
    "pyasn1>=0.6.3",
    "ujson>=5.12.0",
    "cbor2>=5.9.0",
    "urllib3>=2.6.3",
    "filelock>=3.20.3",
    "virtualenv>=20.36.1",
    "pygments>=2.20.0",
    "requests>=2.33.0",
    "pyjwt>=2.13.0",
]

[tool.django-stubs]
django_settings_module = "config.settings"
