[package]
name = "gaming-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.42"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.18.1", features = ["v4"] }
