[package]
name = "gaming-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
fake = { version = "4.4.0", features = ["derive", "chrono"] }
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
