[project]
name = "provisioner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Arpeggio>=2.0.3",
    "attrs>=25.4.0",
    "asgiref>=3.11.1",
    "boto3>=1.43.8",
    "botocore>=1.43.8",
    "cffi>=2.0.0",
    "cryptography>=46.0.7",
    "debugpy>=1.8.20",
    "dill>=0.4.1",
    "grpcio>=1.80.0",
    "Jinja2>=3.1.6",
    "jmespath>=1.1.0",
    "kubernetes>=32.0.0",
    "paramiko>=4.0.0",
    "MarkupSafe>=3.0.3",
    "parver>=0.5",
    "protobuf>=7.34.1",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
"pycparser>=2.23",
    "python-dateutil>=2.9.0.post0",
    "PyYAML>=6.0.3",
    "redis>=5.2.1",
    "s3transfer>=0.17.0",
    "semver>=3.0.4",
    "six>=1.17.0",
    "typing_extensions>=4.15.0",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20", "SIM", "RUF", "C901"]
ignore = ["S101"]

# Per-function McCabe complexity limit (ADR-012). Existing offenders carry
# `# noqa: C901`; threshold ratchets down as the backlog shrinks.
[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# S101: assert, S105/S106: hardcoded passwords in tests, S701: jinja2 autoescape (templates are shell scripts, not HTML)
"tests/**/*.py" = ["S101", "S105", "S106", "S701"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
exclude = [
    "venv/",
    ".venv/",
    "tests/",
]
# Start permissive, tighten over time (matches shifter-platform)
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
# Disable untyped library checks - stubs not worth installing for these
disable_error_code = ["import-untyped"]
